@@ -13,7 +13,6 @@ import com.sigmundgranaas.forgero.core.Forgero;
 import com.sigmundgranaas.forgero.core.context.Contexts;
 import com.sigmundgranaas.forgero.core.customdata.DataContainer;
 import com.sigmundgranaas.forgero.core.property.Attribute;
-import com.sigmundgranaas.forgero.core.property.AttributeType;
 import com.sigmundgranaas.forgero.core.property.CalculationOrder;
 import com.sigmundgranaas.forgero.core.property.NumericOperation;
 import com.sigmundgranaas.forgero.core.property.Property;
@@ -88,46 +87,54 @@ public class Construct implements Composite, ConstructedState {
 	@Override
 	public @NotNull
 	List<Property> getRootProperties() {
-		return compositeProperties(Target.EMPTY);
+		return compositeProperties(Matchable.DEFAULT_TRUE, MatchContext.of());
+	}
+
+	@Override
+	public @NotNull List<Property> getRootProperties(Matchable target, MatchContext context) {
+		return compositeProperties(target, context.add(type()));
 	}
 
 	@Override
 	public @NotNull
-	List<Property> applyProperty(Target target) {
-		var newTarget = target.combineTarget(new TypeTarget(Set.of(type.typeName())));
-		return compositeProperties(newTarget);
+	List<Property> applyProperty(Matchable target, MatchContext context) {
+		var newTarget = context.add(type);
+		return compositeProperties(target, newTarget);
 	}
 
-	public List<Property> compositeProperties(Target target) {
+	public List<Property> compositeProperties(Matchable target, MatchContext context) {
 		var props = Stream.of(ingredients(), slots())
 				.flatMap(List::stream)
-				.map(prop -> prop.applyProperty(target))
+				.map(state -> state.getRootProperties(target, context))
 				.flatMap(List::stream)
 				.filter(prop -> !(prop instanceof Attribute attribute && attribute.getContext().test(Contexts.LOCAL)))
 				.collect(Collectors.toList());
 
 		var upgradeProps = ingredients()
 				.stream()
-				.map(state -> state.applyProperty(target))
+				.map(slot -> slot.getRootProperties(target, context))
 				.flatMap(List::stream)
 				.filter(this::filterAttribute)
 				.toList();
 
-		var compositeAttributes = Property.stream(props)
+		List<Property> compositeAttributes = Property.stream(props)
 				.getAttributes()
 				.collect(Collectors.toMap(Attribute::toString, attribute -> attribute, (attribute1, attribute2) -> attribute1.getPriority() > attribute2.getPriority() ? attribute1 : attribute2))
 				.values()
 				.stream()
 				.filter(attribute -> attribute.getContext().test(Contexts.COMPOSITE))
-				.map(Property.class::cast)
-				.toList();
+				.collect(Collectors.toList());
 
 		var newValues = new ArrayList<Property>();
-		for (AttributeType type : AttributeType.values()) {
-			var newBaseAttribute = new AttributeBuilder(type.toString()).applyOperation(NumericOperation.ADDITION).applyOrder(CalculationOrder.BASE);
+		Set<String> types = compositeAttributes.stream()
+				.map(Property::type)
+				.collect(Collectors.toUnmodifiableSet());
+
+		for (String type : types) {
+			var newBaseAttribute = new AttributeBuilder(type).applyOperation(NumericOperation.ADDITION).applyOrder(CalculationOrder.BASE);
 			newBaseAttribute.applyValue(Property.stream(compositeAttributes).applyAttribute(type)).applyCategory(Category.UNDEFINED);
 			var attribute = newBaseAttribute.build();
-			if (attribute.getValue() != 0 && compositeAttributes.stream().filter(prop -> prop instanceof Attribute attribute1 && attribute1.getAttributeType().equals(type.toString())).toList().size() > 1) {
+			if (attribute.getValue() != 0 && compositeAttributes.stream().filter(prop -> prop instanceof Attribute attribute1 && attribute1.getAttributeType().equals(type)).toList().size() > 1) {
 				newValues.add(newBaseAttribute.build());
 			}
 		}
@@ -160,6 +167,17 @@ public class Construct implements Composite, ConstructedState {
 			return Category.UPGRADE_CATEGORIES.contains(attribute.getCategory());
 		}
 		return false;
+	}
+
+	@Override
+	public State strip() {
+		var builder = builder();
+		parts().stream().map(State::strip).forEach(builder::addIngredient);
+		builder.id(identifier());
+		builder.type(type());
+		builder.addSlotContainer(getSlotContainer().strip());
+
+		return builder.build();
 	}
 
 	@Override
